# skill-deck

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
src/: App.tsx  bindings.ts  constants.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: install.rs  update.rs
src-tauri/src/core/: discovery.rs  github_api.rs  installer.rs  local_lock.rs  mod.rs  skill_lock.rs  source_parser.rs  uninstaller.rs  wellknown.rs
src-tauri/src/models/: install.rs  mod.rs  source.rs  update.rs
src/components/: update-dialog.tsx
src/components/layout/: Header.tsx
src/components/skills/: EmptyStates.tsx  SkillCard.tsx  SkillDetailDialog.tsx  SkillsPanel.tsx  SkillsSection.tsx  SkillsToolbar.tsx
src/components/skills/add-skill/: CompleteStep.tsx  ConfirmStep.tsx  InstallingStep.tsx  types.ts
src/components/skills/add-skill/__tests__/: CompleteStep.test.tsx
src/hooks/: useTauriApi.ts
src/hooks/__tests__/: useTauriApi.test.ts
src/i18n/locales/: en.json  zh-CN.json
src/pages/: SettingsPage.tsx  WizardPage.tsx
src/stores/: skills.ts  updater.ts
src/stores/__tests__/: skills.test.ts  updater.test.ts
src/utils/: relative-time.ts
src/utils/__tests__/: relative-time.test.ts
