[package]
name = "app"
version = "0.10.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

# 类型安全绑定生成
specta = "2.0.0-rc.22"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"

# 新增依赖
serde_yaml = "0.9"
thiserror = "2"
dirs = "6"

# 临时目录
tempfile = "3"

# HTTP 请求
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 计算相对路径
pathdiff = "0.2"

# 递归目录遍历
walkdir = "2"

# 来源格式解析
regex = "1"

# URL 解析
url = "2"

# URL 编码
urlencoding = "2"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 延迟初始化单例
once_cell = "1"
sha2 = "0.10.9"

[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
tempfile = "3"
